--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,25 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
+}
+.banner {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+
+  width: 100%;
+  height: 677px;
+  background-color: #2d25a0;
+}
+.banner img {
+  padding-top: 100px;
+  padding-right: 100px;
+  height: 438px;
+  width: 556px;
+}
+.banner-text {
+  font-size: 60px;
+  color: white;
+  padding-top: 100;
 }
