--- a/styles/style.css
+++ b/styles/style.css
@@ -99,3 +99,24 @@ p {
 .player p {
   margin: 5px;
 }
+/*---------------------
+    footer part 
+-------------------*/
+footer {
+  margin: 60px 0 60px 0;
+}
+
+.footer-img img {
+  height: 120px;
+  width: 400px;
+}
+.social-icon {
+  margin-left: 10px;
+}
+.fab {
+  padding: 10px;
+  font-size: 20px;
+  color: rgb(116, 107, 107);
+  background-color: rgb(219, 218, 218);
+  border-radius: 50%;
+}
