--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,53 @@ p {
   height: 356px;
   width: 500px;
 }
+/* official sponser */
+.sponser-area {
+  margin: 60px 0 60px 0;
+}
+.sponser-title {
+  font-size: 2.5rem;
+}
+.company-name {
+  margin-top: 40px;
+}
+.company-name a {
+  text-decoration: none;
+  padding: 10px 20px;
+}
+#bcb {
+  background-color: red;
+  border-radius: 30px;
+  color: white;
+  font-weight: bolder;
+  font-size: 1.7rem;
+  margin: 10px;
+}
+#nokia {
+  border: 1px solid gray;
+  border-radius: 30px;
+  color: orangered;
+  font-size: 1.7rem;
+  margin: 10px;
+}
+#hero {
+  background-color: orangered;
+  color: white;
+  border-radius: 30px;
+  font-size: 1.7rem;
+  margin: 10px;
+}
+#ivac {
+  border: 1px solid gray;
+  border-radius: 30px;
+  color: black;
+  font-size: 1.7rem;
+  margin: 10px;
+  font-weight: 700;
+}
+span {
+  color: brown;
+}
 /*---------------------
     footer part 
 -------------------*/
